--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "bugs": {
     "url": "https://github.com/KonstantinLukaschenko/generator-react-uikit-webpack-typescript/issues"
   },
+  "scripts": {
+    "test": "mocha",
+    "publish": "npm publish"
+  },
   "files": [
     "app"
   ],
@@ -27,5 +31,10 @@
   ],
   "dependencies": {
     "yeoman-generator": "^3.1.1"
+  },
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^1.9.1"
   }
 }
