--- a/app/templates/package.json
+++ b/app/templates/package.json
@@ -18,29 +18,30 @@
   },
   "browserslist": [ "> 1%", "ie > 9" ],
   "devDependencies": {
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
-    "file-loader": "^1.1.11",
+    "clean-webpack-plugin": "^1.0.0",
+    "copy-webpack-plugin": "^4.6.0",
+    "file-loader": "^2.0.0",
     "s3-upload": "^0.1.0",
-    "node-sass": "^4.9.3",
+    "node-sass": "^4.10.0",
     "sass-loader": "^7.1.0",
-    "style-loader": "^0.22.1",
-    "css-loader": "^1.0.0",
+    "style-loader": "^0.23.1",
+    "css-loader": "^1.0.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^4.5.0",
-    "typescript": "^3.0.1",
-    "url-loader": "^1.1.1",
-    "webpack": "^4.16.5",
-    "webpack-cli": "^2.0.14",
-    "webpack-dev-server": "^3.1.5",
+    "typescript": "^3.2.1",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.26.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4",
-    "mini-css-extract-plugin": "^0.4.1"
+    "mini-css-extract-plugin": "^0.4.5"
   },
   "dependencies": {
-    "@types/react": "^16.4.11",
-    "@types/react-dom": "^16.0.7",
-    "react": "16.4.2",
-    "react-dom": "^16.4.2",
-    "uikit": "^3.0.0-rc.11"
+    "@types/react": "^16.7.11",
+    "@types/react-dom": "^16.0.11",
+    "@types/node": "10.12.11",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "uikit": "^3.0.0-rc.25"
   }
 }
